2012-10-25  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.fb: Updated.

	* fb/x_display.c, fb/x.h, fb/x_window.c:
	  /dev/input/event* of keyboard is processed instead of read(STDIN_FILENO).

2012-10-24  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Minor fixes.

2012-10-23  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.fb: Updated.

	* fb/x_display.h, xlib/x_display.h: Added.

	* configure.in: Install mlterm-fb with -m 4755 -o root option
	  for mouse support.

	* fb/x_display.c, fb/x_window.c, fb/x.h: Mouse support is added.
	  (/dev/input/eventN device is used.)

2012-10-19  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: memmove is used instead of memcpy in copying overlapped
	  area in framebuffer.
	  (Thanks to uobikiemukot san)

	* tool/mlimgloader/main.c: Minor fixes.

2012-10-18  Araki Ken  <arakiken@users.sf.net>

	* configure.in:
	  - Fix the way to search libm for pow().
	  - mlimgloader is possible to be built in --with-gui=fb.

	* doc/ja/README.fb: Updated.

	* fb/x_color.c: 15 and 16 bpp are supported.

	* fb/x_imagelib.c, fb/x.h, mlimgloader/main.c, c_imagelib.c:
	  Wall picture and sixel graphics are supported except in 8 bpp.

2012-10-17  Araki Ken  <arakiken@users.sf.net>

	* README, doc/ja/README.ja, doc/ja/README.fb: Updated.

	* fb/x_window.c: Display width and height are applied forcibly even if
	  x_window_resize() is called with any value.

	* fb/x_font.c: Initialize XFontStruct::ref_count in loading a new font.

2012-10-16  Araki Ken  <arakiken@users.sf.net>

	* main_loop.c, x.h, x_dislay.h, x_font.h, x_font_config.c,
	  x_font_manager.c, x_main_config.c, x_screen_manager.c, x_window.h:
	  Minor fixes for framebuffer support.

	* window/fb, doc/ja/README.fb, etc/font-fb: Added for framebuffer support.

	* win32/x.[ch]:
	  - x_win32.[ch] -> x.[c]
	  - XParseGeometry() is added.

	* x_picture.c: Overlapped pictures are removed when a new picture is added
	  in x_picture_manager_add().
