@@ -1,3 +1,7 @@
+2012-10-26  Araki Ken  <arakiken@users.sf.net>
+
+	* fb/x.h, fb/x_display.c: Minor fixes.
+
 2012-10-25  Araki Ken  <arakiken@users.sf.net>
 
 	* doc/ja/README.fb: Updated.
